// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProfileMenu > Styles > should render with a profile picture 1`] = `
.circuit-0 {
  display: inline-block;
}

.circuit-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  outline: none;
  color: var(--cui-fg-normal);
  background-color: var(--cui-bg-normal);
  text-align: left;
  cursor: pointer;
  -webkit-transition: color 120ms ease-in-out,background-color 120ms ease-in-out;
  transition: color 120ms ease-in-out,background-color 120ms ease-in-out;
  height: 100%;
  padding: 0 16px;
  border-left: 1px solid var(--cui-border-divider);
}

.circuit-1:hover {
  background-color: var(--cui-bg-normal-hovered);
  color: var(--cui-fg-normal-hovered);
}

.circuit-1:active {
  background-color: var(--cui-bg-normal-pressed);
  color: var(--cui-fg-normal-pressed);
}

.circuit-1:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px var(--cui-border-focus);
}

.circuit-1:focus::-moz-focus-inner {
  border: 0;
}

.circuit-1:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-1:disabled,
.circuit-1[disabled] {
  pointer-events: none;
  background-color: var(--cui-bg-normal-disabled);
  color: var(--cui-fg-normal-disabled);
}

.circuit-2 {
  width: 24px;
  height: 24px;
}

@media (min-width: 768px) {
  .circuit-2 {
    width: 32px;
    height: 32px;
  }
}

@media (max-width: 767px) {
  .circuit-3 {
    border: 0;
    clip: rect(0 0 0 0);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    white-space: nowrap;
    width: 1px;
  }
}

@media (min-width: 768px) {
  .circuit-3 {
    margin: 0 12px;
    max-width: 20ch;
  }
}

.circuit-4 {
  display: block;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.circuit-5 {
  display: none;
}

@media (min-width: 768px) {
  .circuit-5 {
    display: block;
    -webkit-transition: -webkit-transform 120ms ease-in-out;
    transition: transform 120ms ease-in-out;
  }

  button[aria-expanded='true'] .circuit-5 {
    -webkit-transform: rotate(180deg);
    -moz-transform: rotate(180deg);
    -ms-transform: rotate(180deg);
    transform: rotate(180deg);
  }
}

<div>
  <div
    class="circuit-0"
  >
    <button
      aria-controls=":r1:"
      aria-expanded="false"
      aria-haspopup="true"
      aria-label="Open profile menu"
      class="circuit-1"
      id=":r0:"
      title="Open profile menu"
      type="button"
    >
      <span
        class="_base_c5c51b"
      >
        <img
          alt=""
          class="_base_2eefa5 _yotta_2eefa5 _identity_2eefa5 circuit-2"
          src="profile.png"
        />
      </span>
      <div
        class="circuit-3"
      >
        <span
          class="_base_c5c51b circuit-4"
        >
          <strong
            class="_base_537b83 _two_537b83 _highlight_537b83"
          >
            Jane Doe
          </strong>
        </span>
      </div>
      <svg
        class="circuit-5"
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8 11c-.266 0-.52-.104-.71-.29l-4-4A1.013 1.013 0 0 1 3 6a1 1 0 0 1 1-1c.266 0 .52.104.71.29L8 8.58l3.29-3.29c.19-.186.445-.29.71-.29a1 1 0 0 1 1 1c0 .266-.104.52-.29.71l-4 4c-.19.186-.444.29-.71.29z"
          fill="currentColor"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`ProfileMenu > Styles > should render without a profile picture 1`] = `
.circuit-0 {
  display: inline-block;
}

.circuit-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  outline: none;
  color: var(--cui-fg-normal);
  background-color: var(--cui-bg-normal);
  text-align: left;
  cursor: pointer;
  -webkit-transition: color 120ms ease-in-out,background-color 120ms ease-in-out;
  transition: color 120ms ease-in-out,background-color 120ms ease-in-out;
  height: 100%;
  padding: 0 16px;
  border-left: 1px solid var(--cui-border-divider);
}

.circuit-1:hover {
  background-color: var(--cui-bg-normal-hovered);
  color: var(--cui-fg-normal-hovered);
}

.circuit-1:active {
  background-color: var(--cui-bg-normal-pressed);
  color: var(--cui-fg-normal-pressed);
}

.circuit-1:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px var(--cui-border-focus);
}

.circuit-1:focus::-moz-focus-inner {
  border: 0;
}

.circuit-1:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-1:disabled,
.circuit-1[disabled] {
  pointer-events: none;
  background-color: var(--cui-bg-normal-disabled);
  color: var(--cui-fg-normal-disabled);
}

@media (max-width: 767px) {
  .circuit-2 {
    border: 0;
    clip: rect(0 0 0 0);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    white-space: nowrap;
    width: 1px;
  }
}

@media (min-width: 768px) {
  .circuit-2 {
    margin: 0 12px;
    max-width: 20ch;
  }
}

.circuit-3 {
  display: block;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.circuit-4 {
  display: none;
}

@media (min-width: 768px) {
  .circuit-4 {
    display: block;
    -webkit-transition: -webkit-transform 120ms ease-in-out;
    transition: transform 120ms ease-in-out;
  }

  button[aria-expanded='true'] .circuit-4 {
    -webkit-transform: rotate(180deg);
    -moz-transform: rotate(180deg);
    -ms-transform: rotate(180deg);
    transform: rotate(180deg);
  }
}

<div>
  <div
    class="circuit-0"
  >
    <button
      aria-controls=":r4:"
      aria-expanded="false"
      aria-haspopup="true"
      aria-label="Open profile menu"
      class="circuit-1"
      id=":r3:"
      title="Open profile menu"
      type="button"
    >
      <span
        class="_base_c5c51b"
      >
        <svg
          fill="none"
          height="24"
          role="presentation"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M22.981 21.22A11.074 11.074 0 0 0 12 12a11.074 11.074 0 0 0-10.981 9.22A1.576 1.576 0 0 0 2.6 23h18.8a1.576 1.576 0 0 0 1.581-1.78zM12 19.5a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm4.5-14a4.5 4.5 0 1 1-9 0 4.5 4.5 0 0 1 9 0z"
            fill="currentColor"
          />
        </svg>
      </span>
      <div
        class="circuit-2"
      >
        <span
          class="_base_c5c51b circuit-3"
        >
          <strong
            class="_base_537b83 _two_537b83 _highlight_537b83"
          >
            Jane Doe
          </strong>
        </span>
      </div>
      <svg
        class="circuit-4"
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8 11c-.266 0-.52-.104-.71-.29l-4-4A1.013 1.013 0 0 1 3 6a1 1 0 0 1 1-1c.266 0 .52.104.71.29L8 8.58l3.29-3.29c.19-.186.445-.29.71-.29a1 1 0 0 1 1 1c0 .266-.104.52-.29.71l-4 4c-.19.186-.444.29-.71.29z"
          fill="currentColor"
        />
      </svg>
    </button>
  </div>
</div>
`;
